--- a/app/src/main/res/layout/fragment_see.xml
+++ b/app/src/main/res/layout/fragment_see.xml
@@ -1,11 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="MissingDefaultResource">
+    <RelativeLayout
+        android:id="@+id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@mipmap/icon_theme_header">
 
-    <TextView
+
+        <ImageView
+            android:id="@+id/child"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="center"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_4"
+            android:src="@drawable/phone_main_child" />
+
+        <TextView
+            android:id="@+id/child_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="11岁7个月"
+            android:textSize="@dimen/dp_8"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_below="@+id/child"
+            android:layout_marginTop="@dimen/dp_2"
+            android:textColor="@color/color_6_blue"
+            />
+
+        <ImageView
+            android:id="@+id/icon_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_search_black"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_10"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/divider"
+            />
+    </RelativeLayout>
+    <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="我是宝宝看页面" />
+        android:id="@+id/see_tab"
+        />
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/see_vp"
+        />
 </LinearLayout>
