--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Your custom size defind by references, can be writted in anywhere, any module, any values/*.xml, for example: -->
-    <dimen name="card_common_margin_left">@dimen/dp_15</dimen>
+    <dimen name="card_common_margin_left" tools:ignore="MissingDefaultResource">@dimen/dp_15</dimen>
 
     <!-- dp and sp values, must be defind in this file! -->
     <!-- view size,you can add if there is no one -->
@@ -427,4 +427,6 @@
     <dimen name="sp_40">40sp</dimen>
     <dimen name="sp_42">42sp</dimen>
     <dimen name="sp_48">48sp</dimen>
+    <dimen name="font_big">18dp</dimen>
+    <dimen name="font_small">13dp</dimen>
 </resources>
