--- a/app/src/main/res/layout/item_watch_choiceness_top.xml
+++ b/app/src/main/res/layout/item_watch_choiceness_top.xml
@@ -25,6 +25,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="120dp"
+            android:layout_toEndOf="@+id/watch_top_pig"
             android:layout_toRightOf="@+id/watch_top_pig"
             android:orientation="vertical">
 
