--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -1,13 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/action_bar_bg">
 
-    <android.support.v7.widget.Toolbar
+    <LinearLayout
+        android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="vertical">
 
-    </android.support.v7.widget.Toolbar>
+        <View
+            android:id="@+id/top_bar_ertra"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_20"
+            android:visibility="gone"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50">
+            <RelativeLayout
+                android:id="@+id/topbar_left_action_frame"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true">
 
-</RelativeLayout>
+                <ImageView
+                    android:id="@+id/top_bar_back_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@mipmap/icon_common_back"
+                    android:clickable="true"
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15"
+                    android:scaleType="center"
+                    android:visibility="visible"/>
+
+                <View
+                    android:id="@+id/top_bar_red_point"
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_marginLeft="@dimen/dp_26"
+                    android:layout_marginTop="@dimen/dp_14"
+                    android:background="@drawable/top_bar_red_point_shape"
+                    android:visibility="gone"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/top_bar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:maxWidth="220dp"
+                android:singleLine="true"
+                android:text="标题"
+                android:textColor="@color/action_bar_text"
+                android:textSize="16sp" />
+        </RelativeLayout>
+    </LinearLayout>
+</LinearLayout>
