--- a/app/src/main/res/layout/item_watch_common.xml
+++ b/app/src/main/res/layout/item_watch_common.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_image"
         android:layout_width="162dp"
         android:layout_height="90dp"
         android:layout_gravity="center_vertical"
@@ -42,6 +43,7 @@
 
 
         <TextView
+            android:id="@+id/js"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
