--- a/app/src/main/res/layout/item_watch_choiceness_top.xml
+++ b/app/src/main/res/layout/item_watch_choiceness_top.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="match_parent"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="4dp"
     app:cardCornerRadius="1dp"
@@ -13,35 +13,38 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="@dimen/dp_150">
 
         <ImageView
             android:id="@+id/watch_top_pig"
-            android:layout_width="230dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/dp_250"
+            android:layout_height="@dimen/dp_150"
             android:scaleType="fitXY"
             android:src="@mipmap/icon_notification" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="120dp"
+            android:layout_height="@dimen/dp_150"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="@dimen/dp_5"
+            android:layout_marginLeft="@dimen/dp_5"
             android:layout_toEndOf="@+id/watch_top_pig"
             android:layout_toRightOf="@+id/watch_top_pig"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/watch_top_chicken"
-                android:layout_width="142dp"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp_142"
+                android:layout_height="@dimen/dp_75"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
                 android:src="@mipmap/icon_notification" />
 
             <ImageView
                 android:id="@+id/watch_top_dog"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_width="@dimen/dp_142"
+                android:layout_height="@dimen/dp_75"
+                android:layout_marginTop="@dimen/dp_10"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
                 android:src="@mipmap/icon_notification" />
