--- a/app/src/main/res/layout/fragment_chosen.xml
+++ b/app/src/main/res/layout/fragment_chosen.xml
@@ -14,12 +14,14 @@
             android:id="@+id/common_recy_center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/white"
             android:layout_weight="1" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/common_recy_buttom"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/white"
             android:layout_weight="1" />
 
 
