--- a/app/src/main/res/layout/listen_progress_play.xml
+++ b/app/src/main/res/layout/listen_progress_play.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,8 @@
     <FrameLayout
         android:id="@+id/listen_paly_Frag"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/white" />
 
     <ProgressBar
@@ -26,7 +27,7 @@
         android:background="@color/gray_f6">
 
         <ImageView
-            android:id="@+id/mini_player_stop"
+            android:id="@+id/listen_player_stop_img"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:paddingLeft="13dp"
@@ -40,11 +41,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_toLeftOf="@+id/action_container"
-            android:layout_toRightOf="@+id/mini_player_stop"
+            android:layout_toRightOf="@+id/listen_player_stop_img"
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/mini_player_song_name"
+                android:id="@+id/listen_player_song_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -54,10 +55,10 @@
                 android:textSize="13sp" />
 
             <TextView
-                android:id="@+id/mini_player_play_time"
+                android:id="@+id/listen_player_play_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/mini_player_song_name"
+                android:layout_below="@+id/listen_player_song_name"
                 android:text="00:00/00:00"
                 android:textColor="@color/gray_ae"
                 android:textSize="12sp" />
@@ -75,7 +76,7 @@
 
 
             <ImageView
-                android:id="@+id/mini_player_play_prev"
+                android:id="@+id/listen_player_play_prev"
                 android:layout_width="40dp"
                 android:layout_height="55dp"
                 android:paddingLeft="10dp"
@@ -84,7 +85,7 @@
                 android:src="@mipmap/audio_player_prev" />
 
             <ImageView
-                android:id="@+id/mini_player_play_next"
+                android:id="@+id/listen_player_play_next"
                 android:layout_width="40dp"
                 android:layout_height="55dp"
                 android:layout_marginLeft="10dp"
@@ -94,7 +95,7 @@
                 android:src="@mipmap/audio_player_next" />
 
             <ImageView
-                android:id="@+id/mini_player_play_mode"
+                android:id="@+id/listen_player_play_mode"
                 android:layout_width="40dp"
                 android:layout_height="55dp"
                 android:paddingLeft="10dp"
@@ -125,4 +126,4 @@
 
         </LinearLayout>
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
