--- a/app/src/main/res/layout/item_watch_choiceness_top.xml
+++ b/app/src/main/res/layout/item_watch_choiceness_top.xml
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="4dp"
-    app:cardCornerRadius="1dp"
-    app:cardElevation="1dp"
-    app:cardMaxElevation="1dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true">
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/care_watch_top_pig_card"
-            android:layout_width="@dimen/dp_230"
-            android:layout_height="@dimen/dp_120"
-            app:cardCornerRadius="@dimen/dp_0"
-            app:cardElevation="1dp"
-            app:cardMaxElevation="1dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true">
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:id="@+id/care_watch_top_pig_card"-->
+            <!--android:layout_width="@dimen/dp_230"-->
+            <!--android:layout_height="@dimen/dp_120"-->
+            <!--app:cardCornerRadius="@dimen/dp_0"-->
+            <!--app:cardElevation="1dp"-->
+            <!--app:cardMaxElevation="1dp"-->
+            <!--app:cardPreventCornerOverlap="true"-->
+            <!--app:cardUseCompatPadding="true">-->
 
             <ImageView
                 android:id="@+id/watch_top_pig"
                 android:layout_width="230dp"
                 android:layout_height="120dp"
-                android:layout_marginTop="@dimen/dp_5"
                 android:scaleType="fitXY"
+                android:background="@color/red"
                 android:src="@mipmap/icon_notification" />
-
-        </android.support.v7.widget.CardView>
+        <!--</android.support.v7.widget.CardView>-->
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:layout_toRightOf="@+id/care_watch_top_pig_card"
+            android:layout_toRightOf="@+id/watch_top_pig"
+            android:layout_marginLeft="@dimen/dp_5"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/care_watch_top_chicken"
-                android:layout_width="@dimen/dp_142"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_5"
-                app:cardCornerRadius="1dp"
-                app:cardElevation="1dp"
-                app:cardMaxElevation="1dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:id="@+id/care_watch_top_chicken"-->
+                <!--android:layout_width="@dimen/dp_142"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--app:cardCornerRadius="1dp"-->
+                <!--app:cardElevation="1dp"-->
+                <!--app:cardMaxElevation="1dp"-->
+                <!--app:cardPreventCornerOverlap="true"-->
+                <!--app:cardUseCompatPadding="true">-->
 
             <ImageView
                 android:id="@+id/watch_top_chicken"
@@ -58,32 +52,34 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
+                android:background="@color/red"
                 android:src="@mipmap/icon_notification" />
-            </android.support.v7.widget.CardView>
+            <!--</android.support.v7.widget.CardView>-->
 
 
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/care_watch_top_dog"
-                android:layout_width="@dimen/dp_142"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="1dp"
-                app:cardElevation="1dp"
-                app:cardMaxElevation="1dp"
-                app:cardPreventCornerOverlap="true"
-                app:cardUseCompatPadding="true">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:id="@+id/care_watch_top_dog"-->
+                <!--android:layout_width="@dimen/dp_142"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="@dimen/dp_5"-->
+                <!--android:layout_marginTop="2dp"-->
+                <!--app:cardCornerRadius="1dp"-->
+                <!--app:cardElevation="1dp"-->
+                <!--app:cardMaxElevation="1dp"-->
+                <!--app:cardPreventCornerOverlap="true"-->
+                <!--app:cardUseCompatPadding="true">-->
 
             <ImageView
                 android:id="@+id/watch_top_dog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_weight="1"
+                android:layout_marginTop="@dimen/dp_3"
                 android:scaleType="fitXY"
+                android:background="@color/red"
                 android:src="@mipmap/icon_notification" />
-            </android.support.v7.widget.CardView>
+            <!--</android.support.v7.widget.CardView>-->
         </LinearLayout>
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
