--- a/app/src/main/res/layout/watch_center_refresh_common.xml
+++ b/app/src/main/res/layout/watch_center_refresh_common.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/common_head"/>
+    <include layout="@layout/common_head" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/common_recy"
+        android:id="@+id/common_refresh_recy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-</LinearLayout
-   >
+</LinearLayout>
