--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -428,4 +428,5 @@
     <dimen name="sp_48">48sp</dimen>
     <dimen name="font_big">18dp</dimen>
     <dimen name="font_small">13dp</dimen>
+    <dimen name="dp_40">40dp</dimen>
 </resources>
