--- a/app/src/main/res/layout/item_listen_common.xml
+++ b/app/src/main/res/layout/item_listen_common.xml
@@ -1,55 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@mipmap/icon_notification"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_78">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/listen_common_img"
+            android:layout_width="@dimen/dp_57"
+            android:layout_height="@dimen/dp_57"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:scaleType="fitXY"
+            android:src="@mipmap/icon_notification" />
 
-        <TextView
-            android:id="@+id/item_watch_list_name"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="专辑名称"
-            android:textColor="#333333"
-            android:textSize="15sp" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="9dp"
+            android:layout_toRightOf="@id/listen_common_img"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/item_watch_list_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:text="专辑描述"
-            android:textColor="#999999"
-            android:textSize="13sp" />
+            <TextView
+                android:id="@+id/item_watch_list_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxEms="8"
+                android:maxLines="2"
+                android:singleLine="true"
+                android:text="专辑名称"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/item_watch_list_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="介绍"
+                android:textColor="#999999"
+                android:textSize="12sp" />
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:maxLines="2"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textColor="#cccccc"
-            android:drawableLeft="@mipmap/icon_music_grey"
-            android:paddingLeft="4dp"
-            android:text="N首"
-            android:textSize="12sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/item_watch_list_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:drawableLeft="@mipmap/icon_music_grey"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:paddingLeft="4dp"
+                android:singleLine="true"
+                android:text="N首"
+                android:textColor="#cccccc"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_item_category_list_divier"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dp"
+            android:background="@color/black10" />
+
+    </RelativeLayout>
 
 </LinearLayout>
