--- a/app/src/main/res/layout/fragment_chosen.xml
+++ b/app/src/main/res/layout/fragment_chosen.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< HEAD
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,33 +14,32 @@
         android:overScrollMode="never"
         android:scrollbars="vertical" />
 </LinearLayout>
-=======
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
 
-        <include layout="@layout/item_watch_choiceness_top" />
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/common_recy_center"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            android:layout_weight="1" />
+        <!--<include layout="@layout/item_watch_choiceness_top" />-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/common_recy_buttom"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            android:layout_weight="1" />
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/common_recy_center"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:background="@color/white"-->
+            <!--android:layout_weight="1" />-->
+
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/common_recy_buttom"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:background="@color/white"-->
+            <!--android:layout_weight="1" />-->
 
 
-    </LinearLayout>
-</ScrollView>
->>>>>>> origin/zhangyadan
+    <!--</LinearLayout>-->
+<!--</ScrollView>-->
