--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             android:button="@null"
             android:checked="true"
             android:drawableTop="@drawable/bottom_bar_video_background"
+            android:focusable="true"
             android:gravity="center|bottom"
             android:paddingTop="@dimen/dp_6"
             android:paddingBottom="@dimen/dp_4"
@@ -54,6 +55,7 @@
             android:background="@drawable/phone_bottom_bar_background"
             android:button="@null"
             android:drawableTop="@drawable/bottom_bar_audio_background"
+            android:focusable="true"
             android:gravity="center|bottom"
             android:paddingTop="@dimen/dp_6"
             android:paddingBottom="@dimen/dp_4"
@@ -69,6 +71,7 @@
             android:background="@drawable/phone_bottom_bar_background"
             android:button="@null"
             android:drawableTop="@drawable/bottom_bar_mine_background"
+            android:focusable="true"
             android:gravity="center|bottom"
             android:paddingTop="@dimen/dp_6"
             android:paddingBottom="@dimen/dp_4"
