--- a/app/src/main/res/layout/item_watch_choiceness_center_no.xml
+++ b/app/src/main/res/layout/item_watch_choiceness_center_no.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/listen_buttom_Relative"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/listen_buttom_Relative"
     android:layout_marginTop="3dp"
     android:padding="3dp">
 
@@ -11,28 +11,36 @@
         android:id="@+id/listen_buttom_img"
         android:layout_width="162dp"
         android:layout_height="90dp"
+        android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp"
-        android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/listen_buttom_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginLeft="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_38"
+        android:layout_marginEnd="@dimen/dp_15"
+        android:layout_marginRight="@dimen/dp_15"
+        android:layout_toStartOf="@+id/listen_center_img"
+        android:layout_toLeftOf="@+id/listen_center_img"
+        android:layout_toEndOf="@id/listen_buttom_img"
         android:layout_toRightOf="@id/listen_buttom_img"
         android:text="@string/app_name" />
 
     <ImageView
         android:id="@+id/listen_center_img"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_20"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="@dimen/dp_35"
+        android:layout_marginEnd="@dimen/dp_20"
+        android:layout_marginRight="@dimen/dp_20"
         android:src="@mipmap/icon_phone_download_disable"
         tools:ignore="RtlCompat" />
 
