--- a/app/src/main/res/layout/fragment_hear.xml
+++ b/app/src/main/res/layout/fragment_hear.xml
@@ -54,7 +54,113 @@
         />
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/hear_vp"
+        android:layout_weight="1"
         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/gray_f6">
+
+        <ImageView
+            android:id="@+id/listen_player_stop_img"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:paddingLeft="13dp"
+            android:paddingRight="8dp"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/audio_player_play" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@+id/action_container"
+            android:layout_toRightOf="@+id/listen_player_stop_img"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/listen_player_song_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="@string/application_name"
+                android:textColor="@color/black80"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/listen_player_play_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/listen_player_song_name"
+                android:text="00:00/00:00"
+                android:textColor="@color/gray_ae"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/action_container"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:gravity="center"
+            android:visibility="visible">
+
+
+            <ImageView
+                android:id="@+id/listen_player_play_prev"
+                android:layout_width="40dp"
+                android:layout_height="55dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/audio_player_prev" />
+
+            <ImageView
+                android:id="@+id/listen_player_play_next"
+                android:layout_width="40dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/audio_player_next" />
+
+            <ImageView
+                android:id="@+id/listen_player_play_mode"
+                android:layout_width="40dp"
+                android:layout_height="55dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/audio_player_mode_random"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/listen_player_play_timer"
+                android:layout_width="40dp"
+                android:layout_height="55dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/audio_player_timer"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/listen_player_lrc"
+                android:layout_width="40dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/icon_lrc" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
