--- a/app/src/main/res/layout/fragment_chosen_hear.xml
+++ b/app/src/main/res/layout/fragment_chosen_hear.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
 
-        <include layout="@layout/common_head" />
+        <!--<include layout="@layout/common_head" />-->
 
-        <include layout="@layout/item_watch_choiceness_top" />
+        <!--<include layout="@layout/item_watch_choiceness_top" />-->
 
 
 
-    </LinearLayout>
-</ScrollView>
+    <!--</LinearLayout>-->
+</LinearLayout>
