--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -429,4 +429,6 @@
     <dimen name="font_big">18dp</dimen>
     <dimen name="font_small">13dp</dimen>
     <dimen name="dp_40">40dp</dimen>
+    <dimen name="font_medium">15dp</dimen>
+    <dimen name="font_smallsmall">11sp</dimen>
 </resources>
