--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,12 @@
         <item name="android:gravity">center</item>
         <item name="android:singleLine">true</item>
     </style>
+
+    <style name="setting_text">
+        <item name="android:layout_marginLeft">36dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@color/color_3_gray_3f</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
