--- a/app/src/main/res/layout/fragment_see.xml
+++ b/app/src/main/res/layout/fragment_see.xml
@@ -53,10 +53,10 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/see_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_40"
         app:tabIndicatorColor="#27D181"
         app:tabIndicatorFullWidth="false"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="#27D181" />
 
     <TextView
