--- a/app/src/main/res/layout/item_listen_choiceness_center.xml
+++ b/app/src/main/res/layout/item_listen_choiceness_center.xml
@@ -3,58 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/chosen_album">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="3dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="3dp"
-        app:cardElevation="1dp"
-        app:cardMaxElevation="1dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="120dp">
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/item_listen_center_img"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:padding="4dp"
-                android:src="@mipmap/icon_notification"
-                app:riv_corner_radius="3dp" />
-
-            <TextView
-                android:id="@+id/item_listen_center_count"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/item_listen_top_img"
-                android:background="@mipmap/bg_small_grey_label"
-                android:drawableLeft="@mipmap/icon_music_white"
-                android:drawablePadding="4dp"
-                android:gravity="center"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:text="99"
-                android:textColor="@color/white"
-                android:layout_alignParentBottom="true"
-                android:textSize="11sp" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                android:layout_height="120dp">
 
-    <TextView
-        android:id="@+id/item_listen_choiceness_type"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="5dp"
-        android:text="流行歌曲"
-        android:textSize="13dp" />
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/item_chosen_img"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="0dp"
+                    android:padding="4dp"
+                    android:src="@mipmap/icon_notification"
+                    app:riv_corner_radius="@dimen/dp_3" />
+
+                <TextView
+                    android:id="@+id/item_chosen_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/item_chosen_img"
+                    android:background="@mipmap/bg_small_grey_label"
+                    android:drawableLeft="@mipmap/icon_music_white"
+                    android:drawablePadding="4dp"
+                    android:gravity="center"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:text="99"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginBottom="@dimen/dp_4"
+                    android:textColor="@color/white"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="11sp" />
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/item_chosen_type"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
+                android:paddingTop="1dp"
+                android:text="流行歌曲"
+                android:textSize="13dp"
+                android:layout_below="@id/item_chosen_img"/>
+        </LinearLayout>
 
 </LinearLayout>
