--- a/app/src/main/res/layout/fragment_chosen_hear.xml
+++ b/app/src/main/res/layout/fragment_chosen_hear.xml
@@ -2,7 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <include layout="@layout/common_head"/>
+         <android.support.v7.widget.RecyclerView
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:id="@+id/rlv"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
     <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
@@ -16,4 +27,5 @@
 
 
     <!--</LinearLayout>-->
+
 </LinearLayout>
