--- a/app/src/main/res/layout/item_watch_common.xml
+++ b/app/src/main/res/layout/item_watch_common.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    >
+    android:layout_height="@dimen/dp_110">
 
     <ImageView
-        android:layout_marginTop="@dimen/dp_6"
         android:id="@+id/cartoon_img"
-        android:layout_width="162dp"
-        android:layout_height="90dp"
+        android:layout_width="@dimen/dp_162"
+        android:layout_height="@dimen/dp_90"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="@dimen/dp_5"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginTop="@dimen/dp_6"
         android:scaleType="fitXY"
         android:src="@mipmap/icon_notification" />
 
     <LinearLayout
-        android:layout_toRightOf="@+id/cartoon_img"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginLeft="@dimen/dp_15"
+        android:layout_toEndOf="@+id/cartoon_img"
+        android:layout_toRightOf="@+id/cartoon_img"
         android:orientation="vertical">
 
         <TextView
@@ -31,37 +33,42 @@
             android:maxLines="2"
             android:text="专辑名称"
             android:textColor="#333333"
-            android:textSize="15sp" />
+            android:textSize="@dimen/sp_15" />
 
         <TextView
             android:id="@+id/item_watch_list_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:singleLine="true"
+            android:layout_marginTop="@dimen/dp_5"
             android:ellipsize="end"
+            android:singleLine="true"
             android:text="专辑描述"
             android:textColor="#999999"
-            android:textSize="13sp" />
+            android:textSize="@dimen/sp_13" />
 
 
         <TextView
             android:id="@+id/cartoom_ji"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:maxLines="2"
-            android:text="共N集"
-            android:singleLine="true"
+            android:layout_marginTop="@dimen/dp_5"
             android:ellipsize="end"
+            android:maxLines="2"
+            android:singleLine="true"
+            android:text="共N集"
             android:textColor="#cccccc"
-            android:textSize="12sp" />
+            android:textSize="@dimen/sp_12" />
     </LinearLayout>
+
     <TextView
-        android:layout_marginTop="@dimen/dp_6"
-        android:layout_below="@+id/cartoon_img"
         android:id="@+id/views"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"
+        android:layout_below="@+id/cartoon_img"
+        android:layout_marginStart="@dimen/dp_5"
+        android:layout_marginLeft="@dimen/dp_5"
+        android:layout_marginTop="@dimen/dp_6"
+        android:layout_marginEnd="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_5"
         android:background="#eaeaea" />
 </RelativeLayout>
